k8s/applications/backend/apigateway/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway-ingress
  labels:
    env: production
    tier: backend
    app: apigateway
    name: apigateway-ingress
spec:
  rules:
  - host: api.localhost
    http:
      paths:
      - path: /
        backend:
          service:
            name: apigateway
            port:
              number: 8000
        pathType: Prefix
  ingressClassName: nginx
